<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ReportActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorSecondary"
        android:padding="10dp"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_bedtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orangeDark"
            android:padding="12dp"
            android:text="@string/bed_type"
            tools:targetApi="lollipop" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_roomtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orangeDark"
            android:padding="12dp"
            android:text="@string/room_type"
            tools:targetApi="lollipop" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_qualitytype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orangeDark"
            android:padding="12dp"
            android:text="@string/string1"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/report"/>


</android.support.v7.widget.LinearLayoutCompat>