<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.UserInformationActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorSecondary"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/child_radius_background_orange">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/usertype"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_userType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:text="@string/vip"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap,RtlSymmetry" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/child_radius_background_orange">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/score"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:text="@string/_2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap,RtlSymmetry" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/child_radius_background_orange">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cmnd"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_cmnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:text="@string/_2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap,RtlSymmetry" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/child_radius_background_orange">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/phonenumber"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:text="@string/_2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap,RtlSymmetry" />
    </RelativeLayout>
</android.support.v7.widget.LinearLayoutCompat>