<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/child_radius_background_primary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/child_radius_background_white"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/check_in_date_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableStart="@mipmap/icon_calendar"
                        android:drawableLeft="@mipmap/icon_calendar"
                        android:focusable="true"
                        android:onClick="onClickCheckInDate"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/child_radius_background_white"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_out"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/check_out_date_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableStart="@mipmap/icon_calendar"
                        android:drawableLeft="@mipmap/icon_calendar"
                        android:focusable="true"
                        android:onClick="onClickCheckOutDate"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/child_radius_background_white"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_type"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sp_room_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/child_radius_background_white"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bed_type"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sp_bed_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/search"
                android:textSize="20sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_filter"
        layout_anchorGravity="bottom|right|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@mipmap/icon_user" />
</android.support.design.widget.CoordinatorLayout>